ajustado error de ajuste en carrusel, se agrega max-height 100vh para ajustar las imagenes del mismo a la pantalla. navbar corregido, queda con baja opacidad. Se agregan HR divisores de cada seccion. Se agregan titulos en negrita a las cards de destacados

--- a/index.html
+++ b/index.html
@@ -63,18 +63,21 @@
               <a class="nav-link active pe-5" href="#inicio"
                 ><i class="fa-solid fa-house"></i> Inicio</a
               >
-              <a class="nav-link active pe-5 " href="#quienes-somos">Quienes Somos</a>
-              <a class="nav-link active pe-5" href="#destacados">Destacados</a>
-              <a class="nav-link active" href="#form">Contacto</a>
+              <a class="nav-link active  pe-5 " href="#quienes-somos">Quienes Somos</a>
+              <a class="nav-link active  pe-5" href="#destacados">Destacados</a>
+              <a class="nav-link active " href="#form">Contacto</a>
             </div>
           </div>
         </div>
     </nav>
-    <!-- N A V B A R -->
-    <section id="texto">
+
+
+
+    <section id="color-back-font">
 
     <!-- C A R R U S E L -->
-    <header class="row" id="inicio">
+    <header id="inicio">
+
       <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="1800">
         <div class="carousel-inner carousel-fade">
           <div class="carousel-item active">
@@ -119,18 +122,22 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+
       </div>
     </header>
+
     
       <!-- Q U I E N E S   S O M O S  -->
-      <article class="d-none d-md-block" id="quienes-somos">
+      <article class="d-none d-sm-block" id="quienes-somos">
       <h1 class="text-center fw-bold text-uppercase mt-5">¿Quiénes somos?</h1>
+      <hr class="my-4 text-center container">
 
       <section class="container mt-5">
       <div class="row text-left">
+        
         <div class="col-md-4 mt-5">
           <div class="icono-quienes-somos"><i class="fa-solid fa-plane-departure"></i></div>
-          <p class="fs-5 mt-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, et fuga quibusdam accusamus aliquam delectus repellat harum eaque at facilis! Praesentium deserunt ad nobis mollitia eos, maiores atque quod pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere mollitia est doloremque consequatur illum? Accusantium obcaecati provident doloribus aliquam esse. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quis veniam nulla dolorum sequi tempore odit autem suscipit obcaecati quibusdam. </p>
+          <p class="fs-5 mt-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, et fuga quibusdam accusamus aliquam delectus repellat harum eaque at facilis! Praesentium deserunt ad nobis mollitia eos, maiores atque quod pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere mollitia est doloremque consequatur illum? Accusantium obcaecati provident doloribus aliquam esse. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quis veniam nulla dolorum sequi tempore odit autem suscipit obcaecati. </p>
         </div>
         <div class="col-md-4 mt-5">
           <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem vero est incidunt! Doloremque fugiat excepturi atque sit veritatis asperiores soluta, deserunt officiis dicta ex hic non, ab dignissimos tempora inventore? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo illo blanditiis dignissimos quasi quos veritatis! Ea dolore aspernatur nemo iste! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem vero non voluptas quas voluptates id labore cupiditate autem atque inventore. </p>
@@ -138,8 +145,8 @@
 
         </div>
         <div class="col-md-4 mt-5">
-          <div class="icono-quienes-somos mt-4"><i class="fa-solid fa-route"></i></div>
-          <p class="fs-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ducimus nobis unde, explicabo, veniam sunt error ipsa quibusdam ut similique quos! Illo dolores eos voluptas sed ullam, beatae quis temporibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia aspernatur cumque adipisci reprehenderit debitis dolor? A suscipit iusto accusantium culpa! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eaque debitis aliquid, nesciunt perspiciatis error voluptas ipsam commodi blanditiis </p>
+          <div class="icono-quienes-somos"><i class="fa-solid fa-route"></i></div>
+          <p class="fs-5  mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ducimus nobis unde, explicabo, veniam sunt error ipsa quibusdam ut similique quos! Illo dolores eos voluptas sed ullam, beatae quis temporibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia aspernatur cumque adipisci reprehenderit debitis dolor? A suscipit iusto accusantium culpa! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eaque debitis aliquid, nesciunt perspiciatis error voluptas ipsam commodi blanditiis </p>
         </div>
       </div>
       </section>
@@ -148,6 +155,7 @@
       <!-- D E S T A C A D O S  -->
       <article id="destacados">
       <h1 class="text-center fw-bold text-uppercase mt-5">Destacados</h1>
+      <hr class="my-4 text-center container">
 
       <div class="container mt-5">
       <section class="row">
@@ -156,7 +164,7 @@
           <div  class="card p-0" id="cont-foto">
             <img src="./assets/img/card1.jpg" class="card-img-top" alt="Patagonia Chilena" />
             <div class="card-body">
-              <h2>Lorem ipsum dolor sit amet.</h2>
+              <h2 class="fw-bold">Lorem ipsum dolor sit amet.</h2>
               <p class="card-text fs-5">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem id nesciunt quibusdam minima qui commodi quis maiores odio officia quod, totam, iure saepe voluptatibus! Nostrum suscipit placeat vitae deserunt ducimus.
               </p>
@@ -168,7 +176,7 @@
           <div class="card p-0" id="cont-foto">
             <img src="./assets/img/card2.jpg" class="card-img-top" alt="Patagonia Chilena" />
             <div class="card-body">
-              <h2>Lorem ipsum dolor sit amet.</h2>
+              <h2 class="fw-bold">Lorem ipsum dolor sit amet.</h2>
               <p class="card-text fs-5">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem id nesciunt quibusdam minima qui commodi quis maiores odio officia quod, totam, iure saepe voluptatibus! Nostrum suscipit placeat vitae deserunt ducimus.
               </p>
@@ -180,7 +188,7 @@
           <div class="card p-0" id="cont-foto">
             <img src="./assets/img/card3.jpg" class="card-img-top" alt="Patagonia Chilena" />
             <div class="card-body">
-              <h2>Lorem ipsum dolor sit amet.</h2>
+              <h2 class="fw-bold">Lorem ipsum dolor sit amet.</h2>
               <p class="card-text fs-5">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem id nesciunt quibusdam minima qui commodi quis maiores odio officia quod, totam, iure saepe voluptatibus! Nostrum suscipit placeat vitae deserunt ducimus.
               </p>
@@ -192,7 +200,7 @@
           <div class="card p-0" id="cont-foto">
             <img src="./assets/img/card4.jpg" class="card-img-top" alt="Patagonia Chilena" />
             <div class="card-body">
-              <h2>Lorem ipsum dolor sit amet.</h2>
+              <h2 class="fw-bold">Lorem ipsum dolor sit amet.</h2>
               <p class="card-text fs-5">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem id nesciunt quibusdam minima qui commodi quis maiores odio officia quod, totam, iure saepe voluptatibus! Nostrum suscipit placeat vitae deserunt ducimus.
               </p>
@@ -209,6 +217,7 @@
       <article id="form">
 
       <h1 class="text-center fw-bold text-uppercase mt-5">Contacto</h1>
+      <hr class="my-4 text-center container">
 
       <section class="container mt-5">
       <div class="mb-3 form">
@@ -269,6 +278,8 @@
         </div>
 
     </footer>
+
+    </section>
 
 
 
